force-app/main/default/objects/referral_template_by_response_type__c/referral_template_by_response_type__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Referral templates by response type</description>
    <label>Referral Template by Response Type</label>
</CustomObject>