force-app/main/default/objects/referral_template_by_response_type__c/fields/Additional_Contact_Attachment_Categories__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contact_Attachment_Categories__c</fullName>
    <description>Additional Contact Attachment Categories</description>
    <inlineHelpText>Additional Contact Attachment Categories</inlineHelpText>
    <label>Additional Contact Attachment Categories</label>
    <length>255</length>
    <type>Text</type>
</CustomField>