force-app/main/default/objects/referral_template_by_response_type__c/fields/Additional_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contacts__c</fullName>
    <description>Additional Corro recipient template developer name</description>
    <inlineHelpText>Additional Corro recipient template developer name</inlineHelpText>
    <label>Additional Contacts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>