force-app/main/default/objects/referral_template_by_response_type__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <description>Customer template  developer name</description>
    <inlineHelpText>Customer template  developer name</inlineHelpText>
    <label>Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>