force-app/main/default/objects/referral_template_by_response_type__c/fields/customer_attachment_categories__c.field-meta.xml
<CustomField>
    <fullName>customer_attachment_categories__c</fullName>
    <description>customer attachment categories</description>
    <inlineHelpText>customer attachment categories</inlineHelpText>
    <label>Customer Attachment Categories</label>
    <length>255</length>
    <type>Text</type>
</CustomField>