force-app/main/default/objects/referral_template_by_response_type__c/fields/Staff__c.field-meta.xml
<CustomField>
    <fullName>Staff__c</fullName>
    <description>Template for staff member developer name</description>
    <inlineHelpText>Template for staff member developer name</inlineHelpText>
    <label>Staff</label>
    <length>255</length>
    <type>Text</type>
</CustomField>