force-app/main/default/objects/referral_template_by_response_type__c/fields/Staff_attachment_categories__c.field-meta.xml
<CustomField>
    <fullName>Staff_attachment_categories__c</fullName>
    <description>Staff attachment categories</description>
    <inlineHelpText>Staff attachment categories</inlineHelpText>
    <label>Staff Attachment Categories</label>
    <length>255</length>
    <type>Text</type>
</CustomField>